added bedrock module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_definitions (-g -Wextra -Wall -Wpedantic)
 
 option (ENABLE_TESTS    "Build tests" OFF)
 option (ENABLE_EXAMPLES "Build examples" OFF)
+option (ENABLE_BEDROCK  "Build bedrock module" ON)
 
 # add our cmake module directory to the path
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
@@ -41,6 +42,10 @@ find_package (nlohmann_json REQUIRED)
 find_package (TCLAP REQUIRED)
 # search for spdlog
 find_package(spdlog REQUIRED)
+# search of bedrock if needed
+if (${ENABLE_BEDROCK})
+    find_package(bedrock REQUIRED)
+endif ()
 
 # library version set here (e.g. for shared libs).
 set (ALPHA_VERSION_MAJOR 0)
