--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ set (ALPHA_VERSION
 
 add_subdirectory (src)
 if(${ENABLE_TESTS})
-  find_package (CppUnit REQUIRED)
+  pkg_check_modules (cppunit REQUIRED IMPORTED_TARGET cppunit)
   add_subdirectory (tests)
 endif(${ENABLE_TESTS})
 if(${ENABLE_EXAMPLES})
