Add first cut of the working ascent microservice implementation with single client-server architecture

--- a/spack.yaml
+++ b/spack.yaml
@@ -4,6 +4,8 @@ spack:
   - pkg-config
   - uuid
   - mochi-thallium
+  - mochi-margo@develop-test
+  - ascent
   - mochi-abt-io
   - nlohmann-json
   - spdlog
