--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ set (server-src-files
 
 set (client-src-files
      Client.cpp
-     ResourceHandle.cpp
+     NodeHandle.cpp
      AsyncRequest.cpp)
 
 set (admin-src-files
@@ -21,111 +21,111 @@ set (module-src-files
 include (CMakePackageConfigHelpers)
 
 # where to install files for "find_package"
-set (alpha-pkg "share/cmake/alpha")
+set (ams-pkg "share/cmake/ams")
 
 # set version fo shared library
-set (alpha-vers "${ALPHA_VERSION_MAJOR}.${ALPHA_VERSION_MINOR}")
+set (ams-vers "${AMS_VERSION_MAJOR}.${AMS_VERSION_MINOR}")
 
 # server library
-add_library (alpha-server ${server-src-files} ${dummy-src-files})
-target_link_libraries (alpha-server
+add_library (ams-server ${server-src-files} ${dummy-src-files})
+target_link_libraries (ams-server
     thallium
     PkgConfig::ABTIO
     PkgConfig::UUID
     nlohmann_json::nlohmann_json)
-target_include_directories (alpha-server PUBLIC $<INSTALL_INTERFACE:include>)
-target_include_directories (alpha-server BEFORE PUBLIC
+target_include_directories (ams-server PUBLIC $<INSTALL_INTERFACE:include>)
+target_include_directories (ams-server BEFORE PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>)
-target_include_directories (alpha-server BEFORE PUBLIC
+target_include_directories (ams-server BEFORE PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
-set_target_properties (alpha-server
-    PROPERTIES VERSION ${ALPHA_VERSION}
-    SOVERSION ${ALPHA_VERSION_MAJOR})
+set_target_properties (ams-server
+    PROPERTIES VERSION ${AMS_VERSION}
+    SOVERSION ${AMS_VERSION_MAJOR})
 
 # client library
-add_library (alpha-client ${client-src-files})
-target_link_libraries (alpha-client thallium PkgConfig::UUID)
-target_include_directories (alpha-client PUBLIC $<INSTALL_INTERFACE:include>)
-target_include_directories (alpha-client BEFORE PUBLIC
+add_library (ams-client ${client-src-files})
+target_link_libraries (ams-client thallium PkgConfig::UUID)
+target_include_directories (ams-client PUBLIC $<INSTALL_INTERFACE:include>)
+target_include_directories (ams-client BEFORE PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>)
-target_include_directories (alpha-client BEFORE PUBLIC
+target_include_directories (ams-client BEFORE PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
-set_target_properties (alpha-client
-    PROPERTIES VERSION ${ALPHA_VERSION}
-    SOVERSION ${ALPHA_VERSION_MAJOR})
+set_target_properties (ams-client
+    PROPERTIES VERSION ${AMS_VERSION}
+    SOVERSION ${AMS_VERSION_MAJOR})
 
 # admin library
-add_library (alpha-admin ${admin-src-files})
-target_link_libraries (alpha-admin thallium PkgConfig::UUID nlohmann_json::nlohmann_json)
-target_include_directories (alpha-admin PUBLIC $<INSTALL_INTERFACE:include>)
-target_include_directories (alpha-admin BEFORE PUBLIC
+add_library (ams-admin ${admin-src-files})
+target_link_libraries (ams-admin thallium PkgConfig::UUID nlohmann_json::nlohmann_json)
+target_include_directories (ams-admin PUBLIC $<INSTALL_INTERFACE:include>)
+target_include_directories (ams-admin BEFORE PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>)
-target_include_directories (alpha-admin BEFORE PUBLIC
+target_include_directories (ams-admin BEFORE PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
-set_target_properties (alpha-admin
-    PROPERTIES VERSION ${ALPHA_VERSION}
-    SOVERSION ${ALPHA_VERSION_MAJOR})
+set_target_properties (ams-admin
+    PROPERTIES VERSION ${AMS_VERSION}
+    SOVERSION ${AMS_VERSION_MAJOR})
 
 if (${ENABLE_BEDROCK})
 # bedrock module library
-add_library (alpha-bedrock-module ${module-src-files})
-target_link_libraries (alpha-bedrock-module alpha-server alpha-admin alpha-client)
-target_include_directories (alpha-bedrock-module PUBLIC $<INSTALL_INTERFACE:include>)
-target_include_directories (alpha-bedrock-module BEFORE PUBLIC
+add_library (ams-bedrock-module ${module-src-files})
+target_link_libraries (ams-bedrock-module ams-server ams-admin ams-client)
+target_include_directories (ams-bedrock-module PUBLIC $<INSTALL_INTERFACE:include>)
+target_include_directories (ams-bedrock-module BEFORE PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>)
-target_include_directories (alpha-bedrock-module BEFORE PUBLIC
+target_include_directories (ams-bedrock-module BEFORE PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
-set_target_properties (alpha-bedrock-module
-    PROPERTIES VERSION ${ALPHA_VERSION}
-    SOVERSION ${ALPHA_VERSION_MAJOR})
+set_target_properties (ams-bedrock-module
+    PROPERTIES VERSION ${AMS_VERSION}
+    SOVERSION ${AMS_VERSION_MAJOR})
 endif ()
 
 # installation stuff (packaging and install commands)
 write_basic_package_version_file(
-    "alpha-config-version.cmake"
-    VERSION ${ALPHA_VERSION}
+    "ams-config-version.cmake"
+    VERSION ${AMS_VERSION}
     COMPATIBILITY AnyNewerVersion)
 
 # generate our config file for find_package()
 set(INCLUDE_INSTALL_DIR include/)
 set(LIB_INSTALL_DIR lib/)
-configure_package_config_file(alpha-config.cmake.in
-  ${CMAKE_CURRENT_BINARY_DIR}/alpha-config.cmake
-  INSTALL_DESTINATION ${LIB_INSTALL_DIR}/alpha/cmake
+configure_package_config_file(ams-config.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/ams-config.cmake
+  INSTALL_DESTINATION ${LIB_INSTALL_DIR}/ams/cmake
   PATH_VARS INCLUDE_INSTALL_DIR)
 
 # some bits for the pkg-config file
 set (DEST_DIR "${CMAKE_INSTALL_PREFIX}")
-set (SERVER_PRIVATE_LIBS "-lalpha-server")
-set (CLIENT_PRIVATE_LIBS "-lalpha-client")
-set (ADMIN_PRIVATE_LIBS  "-lalpha-admin")
-configure_file ("alpha-server.pc.in" "alpha-server.pc" @ONLY)
-configure_file ("alpha-client.pc.in" "alpha-client.pc" @ONLY)
-configure_file ("alpha-admin.pc.in"  "alpha-admin.pc"  @ONLY)
+set (SERVER_PRIVATE_LIBS "-lams-server")
+set (CLIENT_PRIVATE_LIBS "-lams-client")
+set (ADMIN_PRIVATE_LIBS  "-lams-admin")
+configure_file ("ams-server.pc.in" "ams-server.pc" @ONLY)
+configure_file ("ams-client.pc.in" "ams-client.pc" @ONLY)
+configure_file ("ams-admin.pc.in"  "ams-admin.pc"  @ONLY)
 
 # configure config.h
 configure_file ("config.h.in" "config.h" @ONLY) 
 
 # "make install" rules
-install (TARGETS alpha-admin alpha-server alpha-client
-         EXPORT alpha-targets
+install (TARGETS ams-admin ams-server ams-client
+         EXPORT ams-targets
          ARCHIVE DESTINATION lib
          LIBRARY DESTINATION lib)
 if (${ENABLE_BEDROCK})
-    install (TARGETS alpha-bedrock-module
+    install (TARGETS ams-bedrock-module
              ARCHIVE DESTINATION lib
              LIBRARY DESTINATION lib)
 endif ()
-install (EXPORT alpha-targets
-         DESTINATION ${alpha-pkg}
-         FILE "alpha-targets.cmake")
-install (FILES "${CMAKE_CURRENT_BINARY_DIR}/alpha-config.cmake"
-               "${CMAKE_CURRENT_BINARY_DIR}/alpha-config-version.cmake"
-         DESTINATION ${alpha-pkg} )
-install (DIRECTORY ../include/alpha
+install (EXPORT ams-targets
+         DESTINATION ${ams-pkg}
+         FILE "ams-targets.cmake")
+install (FILES "${CMAKE_CURRENT_BINARY_DIR}/ams-config.cmake"
+               "${CMAKE_CURRENT_BINARY_DIR}/ams-config-version.cmake"
+         DESTINATION ${ams-pkg} )
+install (DIRECTORY ../include/ams
          DESTINATION include
          FILES_MATCHING PATTERN "*.h")
-install (FILES "${CMAKE_CURRENT_BINARY_DIR}/alpha-server.pc"
-               "${CMAKE_CURRENT_BINARY_DIR}/alpha-client.pc"
-               "${CMAKE_CURRENT_BINARY_DIR}/alpha-admin.pc"
+install (FILES "${CMAKE_CURRENT_BINARY_DIR}/ams-server.pc"
+               "${CMAKE_CURRENT_BINARY_DIR}/ams-client.pc"
+               "${CMAKE_CURRENT_BINARY_DIR}/ams-admin.pc"
          DESTINATION "lib/pkgconfig/")
