--- a/src/ams-admin.pc.in
+++ b/src/ams-admin.pc.in
@@ -3,10 +3,10 @@ exec_prefix=${prefix}
 libdir=${prefix}/lib
 includedir=${prefix}/include
 
-Name: alpha-client
+Name: ams-admin
 Description: <insert description here>
-Version: @ALPHA_VERSION@
+Version: @AMS_VERSION@
 
 Requires: thallium
-Libs: -L${libdir} @CLIENT_PRIVATE_LIBS@ -lstdc++
+Libs: -L${libdir} @ADMIN_PRIVATE_LIBS@ -lstdc++
 Cflags: -I${includedir}
