--- a/src/ams-server.pc.in
+++ b/src/ams-server.pc.in
@@ -3,10 +3,10 @@ exec_prefix=${prefix}
 libdir=${prefix}/lib
 includedir=${prefix}/include
 
-Name: alpha-admin
+Name: ams-server
 Description: <insert description here>
-Version: @ALPHA_VERSION@
+Version: @AMS_VERSION@
 
-Requires: thallium
-Libs: -L${libdir} @ADMIN_PRIVATE_LIBS@ -lstdc++
+Requires: thallium abt-io
+Libs: -L${libdir} @SERVER_PRIVATE_LIBS@ -lstdc++
 Cflags: -I${includedir}
